--- a/src/SocialMediaDashboard.Common/Resources/AccountResource.resx
+++ b/src/SocialMediaDashboard.Common/Resources/AccountResource.resx
@@ -117,14 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AccountAdded" xml:space="preserve">
+  <data name="Added" xml:space="preserve">
     <value>Account successfully added to user.</value>
   </data>
-  <data name="AccountAddException" xml:space="preserve">
-    <value>Unexpected add issues..</value>
-  </data>
-  <data name="AccountAlreadyExist" xml:space="preserve">
+  <data name="AlreadyExist" xml:space="preserve">
     <value>This account is already tied to the user.</value>
+  </data>
+  <data name="Denied" xml:space="preserve">
+    <value>You are trying to delete data that does not belong to you..</value>
+  </data>
+  <data name="Exception" xml:space="preserve">
+    <value>Unexpected add issues..</value>
   </data>
   <data name="IncorrectData" xml:space="preserve">
     <value>Data for create account is incorrect.</value>
