--- a/src/SocialMediaDashboard.Domain/Resources/CommonResource.resx
+++ b/src/SocialMediaDashboard.Domain/Resources/CommonResource.resx
@@ -117,8 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Id" xml:space="preserve">
+    <value>id</value>
+  </data>
   <data name="NotFound" xml:space="preserve">
     <value>Nothing found.</value>
+  </data>
+  <data name="Role" xml:space="preserve">
+    <value>role</value>
+  </data>
+  <data name="String" xml:space="preserve">
+    <value>string</value>
   </data>
   <data name="Successful" xml:space="preserve">
     <value>Successful operation.</value>
