--- a/src/SocialMediaDashboard.Domain/Resources/ObservationResource.resx
+++ b/src/SocialMediaDashboard.Domain/Resources/ObservationResource.resx
@@ -117,28 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Added" xml:space="preserve">
-    <value>Subscription successfully added to user.</value>
-  </data>
-  <data name="AlreadyExist" xml:space="preserve">
-    <value>This subscription is already tied to the user.</value>
-  </data>
-  <data name="Deleted" xml:space="preserve">
-    <value>Subscription successfully deleted from user.</value>
-  </data>
-  <data name="IncorrectData" xml:space="preserve">
-    <value>Data for create subscription is incorrect.</value>
-  </data>
   <data name="NotFound" xml:space="preserve">
-    <value>Subscriptions not found.</value>
+    <value>Observations not found.</value>
   </data>
   <data name="NotFoundSpecified" xml:space="preserve">
-    <value>Specified subscription not found.</value>
-  </data>
-  <data name="SameData" xml:space="preserve">
-    <value>These details are the same for this subscription.</value>
-  </data>
-  <data name="Updated" xml:space="preserve">
-    <value>Subscription successfully updated.</value>
+    <value>Specified observation not found.</value>
   </data>
 </root>
