--- a/src/SocialMediaDashboard.Domain/Resources/ProfileResource.resx
+++ b/src/SocialMediaDashboard.Domain/Resources/ProfileResource.resx
@@ -117,82 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConnectionMsSqlServerInvalid" xml:space="preserve">
-    <value>Invalid MS SQL Server connection string format.</value>
+  <data name="NotFound" xml:space="preserve">
+    <value>User profile not found.</value>
   </data>
-  <data name="ConnectionPostgreSqlInvalid" xml:space="preserve">
-    <value>Invalid PostgreSQL connection string format, </value>
+  <data name="NotFoundSpecified" xml:space="preserve">
+    <value>Specified user profile not found.</value>
   </data>
-  <data name="FileMaximumLength" xml:space="preserve">
-    <value>The file size is larger than the allowed one (size should not exceed 20 Kb).</value>
+  <data name="SameData" xml:space="preserve">
+    <value>These details are the same for this user profile.</value>
   </data>
-  <data name="FileTypeNotAllowed" xml:space="preserve">
-    <value>The file type is not allowed.</value>
-  </data>
-  <data name="JwtSecretInvalid" xml:space="preserve">
-    <value>Invalid secret format, use: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</value>
-  </data>
-  <data name="JwtTokenLifetimeInvalid" xml:space="preserve">
-    <value>Invalid token lifetime format, use: hh:mm:ss.</value>
-  </data>
-  <data name="ProfileBirthDateInvalid" xml:space="preserve">
-    <value>Invalid date birth value, there should be more or equal 1970-01-01.</value>
-  </data>
-  <data name="ProfileGenderInvalid" xml:space="preserve">
-    <value>Invalid gender format.</value>
-  </data>
-  <data name="SentryDsnInvalid" xml:space="preserve">
-    <value>Invalid Dsn value.</value>
-  </data>
-  <data name="SentryMinimumBreadcrumbLevelInvalid" xml:space="preserve">
-    <value>Invalid minimum breadcrumb level.</value>
-  </data>
-  <data name="SentryMinimumEventLevelInvalid" xml:space="preserve">
-    <value>Invalid minimum event level.</value>
-  </data>
-  <data name="SocialNetworkInstagramAccountPasswordInvalid" xml:space="preserve">
-    <value>Invalid password of Instagram account.</value>
-  </data>
-  <data name="SocialNetworkInstagramAccountUsernameInvalid" xml:space="preserve">
-    <value>Invalid username of Instagram account.</value>
-  </data>
-  <data name="SocialNetworkVkAccessTokenInvalid" xml:space="preserve">
-    <value>Invalid Vk access token.</value>
-  </data>
-  <data name="SocialNetworkYouTubeAccessTokenInvalid" xml:space="preserve">
-    <value>Invalid YouTube access token.</value>
-  </data>
-  <data name="SubscriptionAccountNameInvalid" xml:space="preserve">
-    <value>Invalid account name.</value>
-  </data>
-  <data name="SubscriptionAccountNameRequired" xml:space="preserve">
-    <value>Account name is required.</value>
-  </data>
-  <data name="SubscriptionTypeIdInvalid" xml:space="preserve">
-    <value>Invalid subscription type identifier.</value>
-  </data>
-  <data name="UserEmailInvalid" xml:space="preserve">
-    <value>Invalid email format.</value>
-  </data>
-  <data name="UserEmailRequired" xml:space="preserve">
-    <value>Email is required.</value>
-  </data>
-  <data name="UserNameRequired" xml:space="preserve">
-    <value>Name is required.</value>
-  </data>
-  <data name="UserNameShort" xml:space="preserve">
-    <value>Name should be from {0} to {1}.</value>
-  </data>
-  <data name="UserPasswordRequired" xml:space="preserve">
-    <value>Password is required.</value>
-  </data>
-  <data name="UserRefreshTokenRequired" xml:space="preserve">
-    <value>Refresh token is required.</value>
-  </data>
-  <data name="UserTokenRequired" xml:space="preserve">
-    <value>Token is required.</value>
-  </data>
-  <data name="UserVerifyCodeRequired" xml:space="preserve">
-    <value>Verify code is required.</value>
+  <data name="Updated" xml:space="preserve">
+    <value>User profile successfully updated.</value>
   </data>
 </root>
