--- a/src/SocialMediaDashboard.Domain/Resources/EmailResource.resx
+++ b/src/SocialMediaDashboard.Domain/Resources/EmailResource.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AccountCreated" xml:space="preserve">
-    <value>Social Media Dashboard account</value>
+    <value>Create account</value>
   </data>
   <data name="PasswordChanged" xml:space="preserve">
     <value>Password was changed</value>
