--- a/src/SocialMediaDashboard.Domain/Resources/EmailResource.resx
+++ b/src/SocialMediaDashboard.Domain/Resources/EmailResource.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AccountCreated" xml:space="preserve">
-    <value>Create account</value>
+  <data name="ConfirmEmail" xml:space="preserve">
+    <value>Confirm your email</value>
   </data>
   <data name="PasswordChanged" xml:space="preserve">
     <value>Password was changed</value>
@@ -127,6 +127,6 @@
     <value>Reset your password</value>
   </data>
   <data name="SenderName" xml:space="preserve">
-    <value>SMD. App</value>
+    <value>Social Media Dashboard</value>
   </data>
 </root>
