--- a/src/SocialMediaDashboard.Domain/Resources/ValidatorResource.resx
+++ b/src/SocialMediaDashboard.Domain/Resources/ValidatorResource.resx
@@ -186,6 +186,9 @@
   <data name="SubscriptionTypeIdInvalid" xml:space="preserve">
     <value>Invalid subscription type identifier.</value>
   </data>
+  <data name="UserConfirmPasswordNotMatch" xml:space="preserve">
+    <value>Passwords do not match.</value>
+  </data>
   <data name="UserConfirmPasswordRequired" xml:space="preserve">
     <value>Confirm password is required.</value>
   </data>
